syntax = "proto3";

package protos;
option go_package = "/vote;vote";
import "protos/vote/candidate.proto";

message Election {
  string id = 1; 
  string name = 2;
  string open_date = 3;
  string end_date = 4;
  string created_at = 5;
  string updated_at = 6;
  int64 deleted_at = 7; 
}

service ElectionService {
  // Create a new election
  rpc Create(ElectionCreate) returns (Election) {};
  // Update an existing election
  rpc Update(ElectionUpdate) returns (Void) {};
  // Delete an existing election
  rpc Delete(ElectionDelete) returns (Void) {};
  // Get an election by its ID
  rpc GetById(ElectionById) returns (Election) {};
  // Get all elections
  rpc GetAll(GetAllElectionReq) returns (GetAllElectionRes) {};
  // Get election result
  rpc GetCandidateVoes(GetCandidateVotesReq) returns (GetCandidateVotesRes){};
}
// Request for getting election reuslts
message GetCandidateVotesReq{
  string id = 1; // election id 
}
// Response for getting election rusults
message GetCandidateVotesRes{
  repeated CandidateElectionRes candidateRes = 1;
}

message CandidateElectionRes{
  string candidate_id = 1;
  int64 count = 2;
}

// Request for creating a new election
message ElectionCreate {
  string name = 1;
  string open_date = 2;
  string end_date = 3;
}

// Request for updating an existing election
message ElectionUpdate {
  string id = 1;
  string name = 2;
  string open_date = 3;
  string end_date = 4;
}

// Request for deleting an existing election
message ElectionDelete {
  string id = 1;
}

// Request for getting an election by its ID
message ElectionById {
  string id = 1;
}

// Request for getting all elections
message GetAllElectionReq {
  string name = 1; 
  string open_date = 3;
  string end_date = 4;
}

// Response for getting all elections
message GetAllElectionRes {
  repeated Election elections = 1;
  int64 count = 2;
}